# rayon

./: CMakeLists.txt  README.md  copy_shaders.ps1
libs/raylib/examples/: CMakeLists.txt
src/: main-pdf-test.cpp  main-plus-d-raytrace-realtime-a-bit.cpp  main-plus-d-raytrace-segmented.cpp  main-plus-d-raytrace.cpp  main-raycast.cpp  main.cpp
src/App/: AppSettings.cpp  AppSettings.h  RayOnApp.cpp  RayOnApp.h
src/Misc/: DiscreteInterval.h  Grid.h  Interval.h  StepInterval.h
src/RayOn/: Camera.h  Color.cpp  Color.h  Material.cpp  Material.h  Matrix4x4.h  NoiseLUT.h  Ray3.h  RayOn.cpp  RayOn.h  SDFLUT.cpp  SDFLUT.h  SFBox.cpp  SFBox.h  SFCircle.cpp  SFCircle.h  SFDrawable.cpp  SFDrawable.h  SFHitInfo.cpp  SFHitInfo.h  SFPoinInfo.h  SFSTracer.cpp  SFSTracer.h  SFSampler.cpp  SFSampler.h  SFScene.cpp  SFScene.h  SFTriangle.h  Scene.cpp  Scene.h  Vec2.h  Vec3.cpp  Vec3.h
src/RayOn/CMS/: CosLUT.h  ONB.h  PDF.h  SinLUT.h
src/RayOn/Materials/: DebugMaterials.cpp  DebugMaterials.h  DiffusiveMaterial.cpp  DiffusiveMaterial.h  DispersiveMaterial.h  IsotropicMaterial.cpp  IsotropicMaterial.h  MTLLoader.cpp  MTLLoader.h  Material.h  RasterColorMaterial.cpp  RasterColorMaterial.h  ReflectingMaterial.cpp  ReflectingMaterial.h  RefractingDispersed.h  RefractingMaterial.h  SolidColorMaterial.cpp  SolidColorMaterial.h
src/RayOn/Textures/: CheckeredColorTexture.h  CheckeredTexture.h  ImageTexture.cpp  ImageTexture.h  LinesTexture.h  SolidColorTexture.h  Texture.h  WireframeTexture.h  ZigZagColorTexture.h
src/RayOn/plus-d/: AABB.h  BVH.cpp  BVH.h  RTDrawable.h  RTHitInfo.h  RTSceneCreator.h
src/RayOn/plus-d/Containers/: RTLightsList.h  RTMesh.h  RTScene.h
src/RayOn/plus-d/Primitives/: RTBBWireframe.h  RTBox.h  RTCylinder.h  RTDisc.h  RTEllipsoid.h  RTHexPrism.h  RTLine.h  RTPolygon.cpp  RTPolygon.h  RTQuad.h  RTSphere.h  RTTriangle.h
src/RayOn/plus-d/Samplers/: RTSampler.cpp  RTSampler.h
src/RayOn/plus-d/Transforms/: RTFlipFace.h  RTRotate.h  RTScale.h  RTTranslate.h
src/Scenes/: CORNEIL-BENCHY.h  CORNEIL-SKULL.h  CORNEIL.h  GlassScene.h  MainScene.h  ObjTest.h  OpticalTest.h  OpticalTest2.h  RayTraceTest.h  RotateTranslate.h  SCHUM-BW-REFLECT.h  SCHUM-BW.h  SCHUM.h  Shapes.h  TextureTest.h  Tux.h
src/Shaders/: debug.glsl  light.glsl  light_px.glsl  sdf.glsl  sdf_px.glsl
src/System/: RTThreadPool.h  Segment.h  ThreadPool.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
src/Tests/: CMakeLists.txt  CosLUT.cpp  scene-tests.cpp  vec2-tests.cpp  vec3-tests.cpp
